fix: fix gallery, hero, and pricing table

--- a/services.html
+++ b/services.html
@@ -52,10 +52,11 @@
             <div class="shell">
               <h2 data-language="ourservices">Unsere Leistungen</h2>
               <div class="p text-width-medium">
-                <p class="big" data-language="ourservicedesc" style=" color:black; font-weight: 500;">Barbershop bietet erstklassige Herrenhaarschnitte,
+                <p class="big" data-language="ourservicedesc" style=" color:black; font-weight: 500;">Barbershop bietet
+                  erstklassige Herrenhaarschnitte,
                   Bartpflege und heiße Rasiermesserrasur. Hier
                   sind nur einige der Dienstleistungen, für die wir bekannt sind.</p>
-              </div>                         
+              </div>
               <article class="box-service box-service-dark box-service-reverse">
                 <p style="color: #fff; font-size:20px" data-language="beardtrimtittle">UNSERE PAKETE</p>
                 <div class="box-service-left"><img class="box-service-image" src="images/services-1-500x490.png" alt=""
@@ -63,7 +64,8 @@
                 </div>
                 <div class="box-service-body">
                   <div class="box-service-header">
-                    <p class="box-service-title" data-language="tradhaircuttittle" style="font-size: 18px; font-weight: 700;">Paket-L</p>
+                    <p class="box-service-title" data-language="tradhaircuttittle"
+                      style="font-size: 18px; font-weight: 700;">Paket-L</p>
                     <p class="box-service-price"><small> €</small>35.<small>00</small>
                     </p>
                   </div>
@@ -75,12 +77,13 @@
                 </div>
               </article>
               <article class="box-service">
-                <div class="box-service-left"><img class="box-service-image" src="images/images/Gallery/guys4.JPG" alt=""
-                    width="500" height="490" />
+                <div class="box-service-left"><img class="box-service-image" src="images/images/Gallery/guys4.JPG"
+                    alt="" width="500" height="490" />
                 </div>
                 <div class="box-service-body" style="color: black; background-color: #f6f5ef;">
                   <div class="box-service-header">
-                    <p class="box-service-title" data-language="beardtrimtittle" style="font-size: 18px; font-weight: 700;">Paket-XL</p>
+                    <p class="box-service-title" data-language="beardtrimtittle"
+                      style="font-size: 18px; font-weight: 700;">Paket-XL</p>
                     <p class="box-service-price"><small>€</small>40.<small>00</small>
                     </p>
                   </div>
@@ -98,7 +101,8 @@
                 </div>
                 <div class="box-service-body">
                   <div class="box-service-header">
-                    <p class="box-service-title" data-language="shorthairtittle" style="font-size: 18px; font-weight: 700;">Paket-XXL</p>
+                    <p class="box-service-title" data-language="shorthairtittle"
+                      style="font-size: 18px; font-weight: 700;">Paket-XXL</p>
                     <p class="box-service-price"><small>€</small>45.<small>00</small>
                     </p>
                   </div>
@@ -112,25 +116,26 @@
                 </div>
               </article>
               <article class="box-service">
-                <div class="box-service-left"><img class="box-service-image" src="images/images/Gallery/ladies1.JPG" alt=""
-                    width="500" height="490" />
+                <div class="box-service-left"><img class="box-service-image" src="images/images/Gallery/ladies1.JPG"
+                    alt="" width="500" height="490" />
                 </div>
-                <div class="box-service-body" style="color: black; background-color: #f6f5ef;" >
+                <div class="box-service-body" style="color: black; background-color: #f6f5ef;">
                   <div class="box-service-header">
-                    <p class="box-service-title" data-language="braidhairtittle" style="font-size: 18px; font-weight: 700;" >NEUEROFFNUNG</p>
+                    <p class="box-service-title" data-language="braidhairtittle"
+                      style="font-size: 18px; font-weight: 700;">NEUEROFFNUNG</p>
                     <!-- <p class="box-service-price"><small>€</small>35.<small>00</small> -->
                     </p>
                   </div>
 
                   <div>
-                    <table>                      
+                    <table>
                       <tbody style="background-color: #f6f5ef;">
                         <tr>
                           <td><strong>Haarschnitt</strong></td>
                           <td>18.00€</td>
                         </tr>
                         <tr>
-                          <td><strong>Waschen Schneiden Fohnen</strong></td>
+                          <td><strong>Waschen Schneiden </strong></td>
                           <td>18.00€</td>
                         </tr>
                         <tr>
@@ -172,12 +177,12 @@
                         <tr>
                           <td><strong>Waxing Gesicht</strong></td>
                           <td>5.00€</td>
-                        </tr>                        
+                        </tr>
                       </tbody>
                     </table>
                   </div>
-                </div>                
-              </article>              
+                </div>
+              </article>
             </div>
           </section>
           <footer class="page-footer page-footer-default">
