update: feedback from review

--- a/contacts-1.html
+++ b/contacts-1.html
@@ -20,9 +20,9 @@
   <div class="page">
         <nav
           style="display: flex; letter-spacing: 3px; font-size: 15px; align-items: center; justify-content: flex-end; height: 40px; padding-right: 5px;">
-          <a href="" style="font-size: 10px; letter-spacing: 2px;">Sprache: </a>
-          <a onclick="" href="javascript:void(0)" data-callLang="eng">English|</a>
-          <a onclick="" href="javascript:void(0)" data-callLang="de">German|</a>
+          <a href="" style="font-size: 10px; letter-spacing: 2px; color: #4aa7b2;"><b> Sprache: </b></a>
+          <a onclick="" href="javascript:void(0)" data-callLang="eng" style="color: #4aa7b2;"><b> English|</b></a>
+          <a onclick="" href="javascript:void(0)" data-callLang="de" style="color: #4aa7b2;"><b> German|</b></a>
         </nav>
     <main class="page-content" id="perspective">
       <div class="content-wrapper">
@@ -44,15 +44,15 @@
               <a class="brand" href="index.html"><img src="images/BARBERSHOP354.PNG" height="50px" /></a>
               <div class="range range-sm-center range-50">
                 <div class="cell-xs-12">
-                  <h2 style="color: #333;">|BONNERSTRASSE 179 | 50354 HÜRTH | TELEFON : 02233 805 36 27|</h2>
+                  <h2 style="color: #333; font-size: 20px;">|BONNERSTRASSE 179 | 50354 HÜRTH | TELEFON : 02233 805 36 27|</h2>
                 </div>
                 <div class="cell-xs-12">
-                  <h2 style="color: #333;">ÖFFNUNGSZEITEN | MONTAG - SAMSTAG | 9:00 - 20:00 UHR | </h2>
+                  <h2 style="color: #333; font-size: 20px;">ÖFFNUNGSZEITEN | MONTAG - SAMSTAG | 9:00 - 20:00 UHR | </h2>
                 </div>
                 <div class="cell-lg-10">
-                  <h3 style="color: #333;"> <a class="brand"
+                  <h3 style="color: #333; font-size: 20px;"> <a class="brand"
                       href="https://instagram.com/barbershophuerth?igshid=YmMyMTA2M2Y="> <img
-                        src="images/images/instagram.png" height="100px" alt="">barbershophuerth</a></h3>
+                        src="images/images/instagram.png" height="30px" alt="">barbershophuerth</a></h3>
                 </div>
               </div>
             </div>
@@ -61,7 +61,7 @@
           <footer class="page-footer page-footer-default">
             <div class="shell">
               <div class="range range-xs-center">
-                <div class="cell-lg-10"><a class="brand" href="index.html"><img src="images/images/blogo.jpeg"
+                <div class="cell-lg-10"><a class="brand" href="index.html"><img src="images/images/b2logo.jpeg"
                       height="150px" /></a>
                   <div class="text-highlighted-wrap">
                       <p class="text-highlighted" data-language="footerdesc" style=" color:black; font-weight: 500;">Barbershop ist ein Nr. 1 Ort, um in der Stadt einen
@@ -93,7 +93,7 @@
                   <li><a data-language="navhome" href="index.html">Heim</a>
                   </li>
       
-                  <li class="active"><a data-language="navservices" href="services.html">Dienstleistungen</a>
+                  <li class=""><a data-language="navservices" href="services.html">Dienstleistungen</a>
                   </li>
       
                   <li><a href="gallery.html" data-language="navgallery">Galerie</a>
