--- a/gallery.html
+++ b/gallery.html
@@ -20,9 +20,9 @@
   <div class="page">
     <nav
       style="display: flex; letter-spacing: 3px; font-size: 15px; align-items: center; justify-content: flex-end; height: 40px; padding-right: 5px;">
-      <a href="" style="font-size: 10px; letter-spacing: 2px;">Sprache: </a>
-      <a onclick="" href="javascript:void(0)" data-callLang="eng">English|</a>
-      <a onclick="" href="javascript:void(0)" data-callLang="de">German|</a>
+      <a href="" style="font-size: 10px; letter-spacing: 2px; color: #4aa7b2;"> <b> Sprache: </b></a>
+      <a onclick="" href="javascript:void(0)" data-callLang="eng" style="color: #4aa7b2;"><b> English|</b></a>
+      <a onclick="" href="javascript:void(0)" data-callLang="de" style="color: #4aa7b2;"><b> German|</b></a>
     </nav>
     <main class="page-content" id="perspective">
       <div class="content-wrapper">
@@ -51,7 +51,7 @@
 
           <section class="section-xl bg-periglacial-blue text-center">
             <div class="shell">
-              <h2 data-language="galleryheading">Trendige Frisuren, Frisur-Ideen</h2>
+              <h2 data-language="galleryheading" style="font-size: 25px;">Trendige Frisuren, Frisur-Ideen</h2>
               <div class="p text-width-medium">
                 <p class="big" data-language="gallerydesc" style=" color:black; font-weight: 500;">
                   Neue und trendige Frisurenideen für Sie. Haarschnitt-Ideen Frisuren Haarfarben-Ideen Haar. Im Trend
@@ -103,7 +103,7 @@
           <footer class="page-footer page-footer-default">
             <div class="shell">
               <div class="range range-xs-center">
-                <div class="cell-lg-10"><a class="brand" href="index.html"><img src="images/images/blogo.jpeg"
+                <div class="cell-lg-10"><a class="brand" href="index.html"><img src="images/images/b2logo.jpeg"
                       height="150px" /></a>
                   <div class="text-highlighted-wrap">
                     <p class="text-highlighted" data-language="footerdesc" style=" color:black; font-weight: 500;">
@@ -136,7 +136,7 @@
               <li><a data-language="navhome" href="index.html">Heim</a>
               </li>
 
-              <li class="active"><a data-language="navservices" href="services.html">Dienstleistungen</a>
+              <li class=""><a data-language="navservices" href="services.html">Dienstleistungen</a>
               </li>
 
               <li><a href="gallery.html" data-language="navgallery">Galerie</a>
