--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="/table.css">
 </head>
- 
+
 <body>
   <div class="page">
-    <nav style="display: flex; letter-spacing: 3px; font-size: 15px; align-items: center; justify-content: flex-end; height: 40px; padding-right: 5px;">
-      <a href="" style="font-size: 10px; letter-spacing: 2px;">Sprache: </a>
-      <a onclick="" href="javascript:void(0)" data-callLang="eng">English|</a>
-      <a onclick="" href="javascript:void(0)" data-callLang="de">German|</a>
+    <nav
+      style="display: flex; letter-spacing: 3px; font-size: 15px; align-items: center; justify-content: flex-end; height: 40px; padding-right: 5px; color:  #4aa7b2;">
+      <a href="" style="font-size: 10px; letter-spacing: 2px; color:  #4aa7b2;"> <b> Sprache: </b></a>
+      <a onclick="" href="javascript:void(0)" data-callLang="eng" style="color: #4aa7b2;"> <b> English|</b></a>
+      <a onclick="" href="javascript:void(0)" data-callLang="de" style="color: #4aa7b2;"> <b> German|</b></a>
     </nav>
     <header class="page-header">
       <div class="rd-navbar-wrap">
@@ -46,18 +47,18 @@
             <div class="rd-navbar-nav-wrap">
               <div class="rd-navbar-nav-inner">
                 <ul class="rd-navbar-nav">
-                  <li class="heronav active"><a style="color: rgb(232, 230, 230); font-weight: 900; font-size: 25px;"
+                  <li class="heronav active"><a style="color: #4aa7b2; font-weight: 900; font-size: 25px;"
                       href="index.html" data-language="navhome">Heim</a>
                   </li>
                   <li><a href="about.html"></a>
                   </li>
-                  <li><a class="heronav" style="color: rgb(232, 230, 230); font-weight: 900; font-size: 25px;"
+                  <li><a class="heronav" style="color:  #4aa7b2; font-weight: 900; font-size: 25px;"
                       href="services.html" data-language="navservices">Dienstleistungen</a>
                   </li>
-                  <li><a class="heronav" style="color: rgb(232, 230, 230); font-weight: 900; font-size: 25px;"
-                      href="gallery.html" data-language="navgallery">Galerie</a>
+                  <li><a class="heronav" style="color:  #4aa7b2; font-weight: 900; font-size: 25px;" href="gallery.html"
+                      data-language="navgallery">Galerie</a>
                   </li>
-                  <li><a class="heronav" style="color: rgb(232, 230, 230); font-weight: 900; font-size: 25px;"
+                  <li><a class="heronav" style="color:  #4aa7b2; font-weight: 900; font-size: 25px;"
                       href="contacts-1.html" data-language="navcontacts">Kontakt</a>
                   </li>
                   <li><a href="blog.html"></a>
@@ -69,21 +70,25 @@
         </nav>
       </div>
     </header>
-
+    <!-- jumbotron-custom jumbotron-custom-3 bg-white bg-image bg-image-custom bg-image-center -->
     <div class="hero">
-
-      <section id="hero_now"
-        class="jumbotron-custom jumbotron-custom-3 bg-white bg-image bg-image-custom bg-image-center"
-        style="background-image: url(images/images/b2-just2-guys.jpeg); background-position: center; background-repeat: no-repeat; height: auto;">
-        <div class="jumbotron-custom-content text-center">
+      <section id="hero_now" class="">
+        <video autoplay loop muted plays-inline class="back-video">
+          <source src="/images/images/hero_vid.MP4" type="video/mp4">
+        </video>
+        <div class="jumbotron-custom-content text-center" id="jumbotron-custom">
           <div class="shell">
             <div class="range range-sm-center">
               <div class="cell-sm-9 cell-md-8 cell-lg-7">
-                <h1 style="color: #fff;" data-language="herotittle">Genießen Sie unseren Friseurservice</h1>
-                <p class="large" data-language="herodesc" style=" color:white; font-weight: 600;">Schaffen Sie mit Barbershop-Services Ihren neuen, umwerfenden
+                <!-- #014d55 -->
+                <h1 style="color: #fff; font-weight: 900;" data-language="herotittle">Genießen Sie unseren
+                  Friseurservice</h1>
+                <p class="large" data-language="herodesc" style=" color:white; font-weight: 600;">Schaffen Sie mit
+                  Barbershop-Services Ihren neuen, umwerfenden
                   Look! Aus Haarschnitte bis hin zu heißen Rasuren, Sie
                   können das beste Friseurhandwerk in der Gegend erleben.</p>
-                <button id="open" class="btn btn-style-1 btn-primary" data-language="heroappointment"> Vereinbare einen
+                <button id="open" class="btn btn-style-1 btn-primary book-appointment" style="margin-bottom: 50px;"
+                  data-language="heroappointment"> Vereinbare einen
                   Termin</button>
               </div>
             </div>
@@ -92,11 +97,11 @@
       </section>
     </div>
     <section class="section-xl bg-periglacial-blue text-center text-md-left">
-      <div class="shell-fluid shell-condensed">
+      <div class="shell-fluid shell-condensed" style="margin-top: -50px; ">
         <div class="range range-md-reverse range-xs-middle range-md-right range-50">
           <div class="cell-md-5 cell-lg-4">
             <div class="inset-1">
-              <h2 data-language="whowearetittle">WER WIR SIND</h2>
+              <h2 data-language="whowearetittle" class="whoweare" style="font-size: 25px;">WER WIR SIND</h2>
               <div class="p text-width-smallest" style=" color:black; font-weight: 600;">
                 <p class="big" data-language="whowearedesc">Experte für alle Haartexturen und spezialisiert auf
                   Relaxers, Texturizers, Cutting & Coloring. Der Salon verwendet nur
@@ -111,7 +116,8 @@
           <div class="cell-md-7 cell-lg-6">
             <div class="row row-gutter-custom range-15">
               <div class="col-xs-12">
-                <figure class="figure-fullwidth"><img src="images/images/bteam.jpeg" alt="" width="300" height="460" />
+                <figure class="figure-fullwidth"><img src="images/images/b2-just2-guys.jpeg" alt="" width="300"
+                    height="460" />
                 </figure>
               </div>
             </div>
@@ -178,8 +184,9 @@
           <div class="cell-md-4 cell-md-6-mod-1 image-wrap-left bg-white bg-image"
             style="background-image: url(images/home-three-2-910x800.jpg);">
             <div class="image-wrap-inner">
-              <h2 data-language="ourservicestittle">UNSERE LEISTUNGEN</h2>
-              <p class="big" data-language="ourservicesdesc" style=" color:black; font-weight: 600;">Kinderhaarschnitt, Föhnstange, Coloration, Damensträhnen,
+              <h2 data-language="ourservicestittle" style="font-size: 25px;">UNSERE LEISTUNGEN</h2>
+              <p class="big" data-language="ourservicesdesc" style=" color:black; font-weight: 600;">Kinderhaarschnitt,
+                Föhnstange, Coloration, Damensträhnen,
                 Herrenhaarschnitt einschließlich Kevin Murphy-Produkten und
                 Styling & Färben für Damen, Tönung, Farbaufhellung</p>
             </div>
@@ -250,9 +257,10 @@
       <div class="shell">
         <div class="range range-50">
           <div class="cell-xs-12">
-            <h2 data-language="ourbarberstittle">UNSERE FRISEURE</h2>
+            <h2 data-language="ourbarberstittle" style="font-size: 25px;">UNSERE FRISEURE</h2>
             <div class="p text-width-medium">
-              <p class="big" data-language="ourbarbersheading" style="color:white; font-weight: 500;">Wir beschäftigen nur hochqualifizierte Friseure, die
+              <p class="big" data-language="ourbarbersheading" style="color:white; font-weight: 500;">Wir beschäftigen
+                nur hochqualifizierte Friseure, die
                 nicht nur Profis sind, sondern auch Spaß daran haben
                 Aufrechterhaltung der Atmosphäre eines klassischen Barbershops.</p>
             </div>
@@ -260,11 +268,12 @@
           <div class="cell-xs-12">
             <div class="range range-30">
               <div class="cell-sm-6 cell-md-12 height-fill">
-                <div class="thumbnail-card"><img class="thumbnail-card-image" src="images/images/bteam.jpeg" alt=""
-                    width="370" height="310" />
+                <div class="thumbnail-card"><img class="thumbnail-card-image" src="images/images/b2-just2-guys.jpeg"
+                    alt="" width="370" height="310" />
                   <div class="thumbnail-card-body">
                     <div class="thumbnail-card-text">
-                      <p data-language="ourbarbersdesc" style=" color:black; font-weight: 600;">Wir alle heißen Kunden willkommen und beraten sie zu ihren
+                      <p data-language="ourbarbersdesc" style=" color:black; font-weight: 600;">Wir alle heißen Kunden
+                        willkommen und beraten sie zu ihren
                         gewünschten Frisuren. Schneiden und Trimmen der Haare nach
                         Kundenvorgabe. Haarstyling mit chemischen Lösungen und Stylingwerkzeugen. Rasieren, Trimmen und
                         Formen der Bärte und
@@ -281,15 +290,16 @@
             <a class="brand" href="index.html"><img src="images/BARBERSHOP354.PNG" height="50px" /></a>
             <div class="range range-sm-center range-50">
               <div class="cell-xs-12">
-                <h2 style="color: #333;">|BONNERSTRASSE 179 | 50354 HÜRTH | TELEFON : 02233 805 36 27|</h2>
+                <h2 style="color: #333;  font-size: 20px;">|BONNERSTRASSE 179 | 50354 HÜRTH | TELEFON : 02233 805 36 27|
+                </h2>
               </div>
               <div class="cell-xs-12">
-                <h2 style="color: #333;">ÖFFNUNGSZEITEN | MONTAG - SAMSTAG | 9:00 - 20:00 UHR | </h2>
+                <h2 style="color: #333; font-size: 20px;">ÖFFNUNGSZEITEN | MONTAG - SAMSTAG | 9:00 - 20:00 UHR | </h2>
               </div>
               <div class="cell-lg-10">
-                <h3 style="color: #333;"> <a class="brand"
+                <h3 style="color: #333; font-size: 20px;"> <a class="brand"
                     href="https://instagram.com/barbershophuerth?igshid=YmMyMTA2M2Y="> <img
-                      src="images/images/instagram.png" height="100px" alt="">barbershophuerth</a></h3>
+                      src="images/images/instagram.png" height="30px" alt="">barbershophuerth</a></h3>
               </div>
             </div>
           </div>
@@ -301,10 +311,11 @@
   <footer class="page-footer page-footer-default">
     <div class="shell">
       <div class="range range-xs-center">
-        <div class="cell-lg-10"><a class="brand" href="index.html"><img src="images/images/blogo.jpeg"
+        <div class="cell-lg-10"><a class="brand" href="index.html"><img src="images/images/b2logo.jpeg"
               height="150px" /></a>
           <div class="text-highlighted-wrap">
-            <p class="text-highlighted" data-language="footerdesc" style=" color:black; font-weight: 600;" >Barbershop ist ein Nr. 1 Ort, um in der Stadt einen
+            <p class="text-highlighted" data-language="footerdesc" style=" color:black; font-weight: 600;">Barbershop
+              ist ein Nr. 1 Ort, um in der Stadt einen
               Herrenhaarschnitt und Damenfrisuren zu bekommen Haarstyling in
               Berlin City. Hier erhalten Sie luxuriöse Friseurerfahrung zu einem vernünftigen Preis.</p>
           </div>
@@ -370,7 +381,8 @@
       <img src="./images/images/icons8-ok-100.png" alt="">
       <h3 data-language="appointmenttittle">Um Ihren Termin zu buchen, nutzen Sie bitte unsere Kontaktdaten.</h3>
       <h4 data-language="appointmentdesc">Klicken Sie hier, um anzurufen oder eine SMS zu senden</h4>
-      <h2 data-language="appointmentphone"><a href="tel:945-768-8234" style="color: rgb(0, 57, 136);" >+9457688234</a></h2>
+      <h2 data-language="appointmentphone"><a href="tel:945-768-8234" style="color: rgb(0, 57, 136);">+9457688234</a>
+      </h2>
       <button id="close" class="btn btn-style-1 btn-primary" data-language="close">
         nah dran
       </button>
