--- a/services.html
+++ b/services.html
@@ -21,9 +21,9 @@
   <div class="page">
     <nav
       style="display: flex; letter-spacing: 3px; font-size: 15px; align-items: center; justify-content: flex-end; height: 40px; padding-right: 5px;">
-      <a href="" style="font-size: 10px; letter-spacing: 2px;">Sprache: </a>
-      <a onclick="" href="javascript:void(0)" data-callLang="eng">English|</a>
-      <a onclick="" href="javascript:void(0)" data-callLang="de">German|</a>
+      <a href="" style="font-size: 10px; letter-spacing: 2px; color: #4aa7b2;"><b> Sprache: </b></a>
+      <a onclick="" href="javascript:void(0)" data-callLang="eng" style="color: #4aa7b2;"> <b> English| </b></a>
+      <a onclick="" href="javascript:void(0)" data-callLang="de" style="color: #4aa7b2;"><b> German|</b></a>
     </nav>
     <main class="page-content" id="perspective">
       <div class="content-wrapper">
@@ -44,7 +44,7 @@
           <div class="page-title">
             <div class="page-title-content">
               <div class="shell">
-                <p class="page-title-header" data-language="servicespagetittle">Dienstleistungen</p>
+                <p class="page-title-header" data-language="servicespagetittle" style="font-size: 25px;">Dienstleistungen</p>
               </div>
             </div>
           </div>
@@ -188,7 +188,7 @@
           <footer class="page-footer page-footer-default">
             <div class="shell">
               <div class="range range-xs-center">
-                <div class="cell-lg-10"><a class="brand" href="index.html"><img src="images/images/blogo.jpeg"
+                <div class="cell-lg-10"><a class="brand" href="index.html"><img src="images/images/b2logo.jpeg"
                       height="150px" /></a>
                   <div class="text-highlighted-wrap">
                     <p class="text-highlighted" data-language="footerdesc">Barbershop ist ein Nr. 1 Ort, um in der Stadt
@@ -221,7 +221,7 @@
                   <li><a data-language="navhome" href="index.html">Heim</a>
                   </li>
 
-                  <li class="active"><a data-language="navservices" href="services.html">Dienstleistungen</a>
+                  <li class=""><a data-language="navservices" href="services.html">Dienstleistungen</a>
                   </li>
 
                   <li><a href="gallery.html" data-language="navgallery">Galerie</a>
