updates: add ladies logo

--- a/gallery.html
+++ b/gallery.html
@@ -101,23 +101,20 @@
           </section>
 
           <footer class="page-footer page-footer-default">
-            <div class="shell">
-              <div class="range range-xs-center">
-                <div class="cell-lg-10"><a class="brand" href="index.html"><img src="images/images/b2logo.jpeg"
-                      height="150px" /></a>
-                  <div class="text-highlighted-wrap">
-                    <p class="text-highlighted" data-language="footerdesc" style=" color:black; font-weight: 500;">
-                      Barbershop ist ein Nr. 1 Ort, um in der Stadt einen
-                      Herrenhaarschnitt und Damenfrisuren zu bekommen Haarstyling in
-                      Berlin City. Hier erhalten Sie luxuriöse Friseurerfahrung zu einem vernünftigen Preis.</p>
-                  </div>
+            <section class="section-xl bg-periglacial-blue text-center" style="margin-top: -50px; margin-bottom:-50px">
+              <div class="shell">
+                <div class="cell-lg-10"><a class="brand" href="index.html"><img src="images/images/blogo-removebg.png"
+                      height="150px" /></a><a class="brand" href="index.html"><img
+                      src="images/images/b2logo-removebg.png" height="150px" /></a>
                 </div>
               </div>
-            </div>
+            </section>
         </div>
-        </footer>
       </div>
-      <div id="perspective-content-overlay"></div>
+      </section>
+      </footer>
+  </div>
+  <div id="perspective-content-overlay"></div>
   </div>
   <!-- RD Navbar-->
   <div class="rd-navbar-wrap">
