--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
       <a onclick="" href="javascript:void(0)" data-callLang="eng" style="color: #4aa7b2;"> <b> English|</b></a>
       <a onclick="" href="javascript:void(0)" data-callLang="de" style="color: #4aa7b2;"> <b> German|</b></a>
     </nav>
+    <!-- <button class="btn-primary" onclick="topFunction()" id="myBtn" title="Go to top">
+      <i class="fa-solid fa-arrow-up"></i> </button> -->
     <header class="page-header">
       <div class="rd-navbar-wrap">
         <nav class="rd-navbar" data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed"
@@ -72,10 +74,12 @@
     </header>
     <!-- jumbotron-custom jumbotron-custom-3 bg-white bg-image bg-image-custom bg-image-center -->
     <div class="hero">
-      <section id="hero_now" class="">
-        <video autoplay loop muted plays-inline class="back-video">
+      <section id="hero_now"
+        class="jumbotron-custom jumbotron-custom-3 bg-white bg-image bg-image-custom bg-image-center"
+        style="background: url(/images/images/b2-just2-guys.jpeg); background-position: center; background-repeat: no-repeat; background-size: cover;">
+        <!-- <video autoplay loop muted plays-inline class="back-video">
           <source src="/images/images/hero_vid.MP4" type="video/mp4">
-        </video>
+        </video> -->
         <div class="jumbotron-custom-content text-center" id="jumbotron-custom">
           <div class="shell">
             <div class="range range-sm-center">
@@ -116,8 +120,7 @@
           <div class="cell-md-7 cell-lg-6">
             <div class="row row-gutter-custom range-15">
               <div class="col-xs-12">
-                <figure class="figure-fullwidth"><img src="images/images/b2-just2-guys.jpeg" alt="" width="300"
-                    height="460" />
+                <figure class=""><img src="images/images/barber-one-person.jpeg" alt="" width="100%" height="620" />
                 </figure>
               </div>
             </div>
@@ -193,7 +196,7 @@
           </div>
 
           <div class="cell-md-4 cell-md-6-mod-2 image-wrap-right bg-gray-dark bg-image"
-            style="background-image: url(images/images/ladies-style.jpg);">
+            style="background-image: url(images/images/ladieshair1.jpg); background-repeat: repeat; background-position: center; background-size: cotain;">
 
             <div class="hero">
               <div class="image-wrap-inner">
@@ -268,7 +271,10 @@
           <div class="cell-xs-12">
             <div class="range range-30">
               <div class="cell-sm-6 cell-md-12 height-fill">
-                <div class="thumbnail-card"><img class="thumbnail-card-image" src="images/images/b2-just2-guys.jpeg"
+                <video controls autoplay loop plays-inline class="back-video">
+                  <source src="/images/images/hero_vid.MP4" type="video/mp4">
+                </video>
+                <!-- <div class="thumbnail-card"><img class="thumbnail-card-image" src="images/images/b2-just2-guys.jpeg"
                     alt="" width="370" height="310" />
                   <div class="thumbnail-card-body">
                     <div class="thumbnail-card-text">
@@ -280,38 +286,46 @@
                         Schnurrbärte der Kunden. Waschen und Konditionieren der Haare der Kunden.</p>
                     </div>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
         </div>
-        <section class="section-xl bg-periglacial-blue text-center">
-          <div class="shell">
-            <a class="brand" href="index.html"><img src="images/BARBERSHOP354.PNG" height="50px" /></a>
-            <div class="range range-sm-center range-50">
-              <div class="cell-xs-12">
-                <h2 style="color: #333;  font-size: 20px;">|BONNERSTRASSE 179 | 50354 HÜRTH | TELEFON : 02233 805 36 27|
-                </h2>
-              </div>
-              <div class="cell-xs-12">
-                <h2 style="color: #333; font-size: 20px;">ÖFFNUNGSZEITEN | MONTAG - SAMSTAG | 9:00 - 20:00 UHR | </h2>
-              </div>
-              <div class="cell-lg-10">
-                <h3 style="color: #333; font-size: 20px;"> <a class="brand"
-                    href="https://instagram.com/barbershophuerth?igshid=YmMyMTA2M2Y="> <img
-                      src="images/images/instagram.png" height="30px" alt="">barbershophuerth</a></h3>
-              </div>
-            </div>
-          </div>
-        </section>
       </div>
   </div>
   </section>
 
   <footer class="page-footer page-footer-default">
-    <div class="shell">
+    <section class="section-xl bg-periglacial-blue text-center" style="margin-top: -50px; margin-bottom:-50px">
+      <div class="shell">
+        <div class="cell-lg-10"><a class="brand" href="index.html"><img src="images/images/blogo-removebg.png"
+              height="150px" /></a><a class="brand" href="index.html"><img src="images/images/b2logo-removebg.png"
+              height="150px" /></a>
+        </div>
+        <!-- <a class="brand" href="index.html"><img src="images/BARBERSHOP354.PNG" height="50px" /></a> -->
+        <div class="range range-sm-center range-50">
+          <div class="cell-xs-12">
+            <h2 style="color: #333;  font-size: 20px;">|BONNERSTRASSE 179 | 50354 HÜRTH | TELEFON : 02233 805 36 27|
+            </h2>
+          </div>
+          <div class="cell-xs-12">
+            <h2 style="color: #333; font-size: 20px;">ÖFFNUNGSZEITEN | MONTAG - SAMSTAG | 9:00 - 20:00 UHR | </h2>
+          </div>
+          <div class="cell-lg-10">
+            <h3 style="color: #333; font-size: 20px;"> <a class="brand"
+                href="https://instagram.com/barbershophuerth?igshid=YmMyMTA2M2Y="> <img
+                  src="images/images/instagram.png" height="30px" alt=""> <span> </span> barbershophuerth</a></h3>
+          </div>
+        </div>
+      </div>
+    </section>
+    </div>
+    </div>
+    </section>
+    <!-- <div class="shell">
       <div class="range range-xs-center">
-        <div class="cell-lg-10"><a class="brand" href="index.html"><img src="images/images/b2logo.jpeg"
+        <div class="cell-lg-10"><a class="brand" href="index.html"><img src="images/images/blogo.jpeg"
+              height="150px" /></a><a class="brand" href="index.html"><img src="images/images/b2logo.jpeg"
               height="150px" /></a>
           <div class="text-highlighted-wrap">
             <p class="text-highlighted" data-language="footerdesc" style=" color:black; font-weight: 600;">Barbershop
@@ -321,7 +335,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </footer>
   <div class="modal fade text-center" id="modalWindow" role="dialog">
     <div class="modal-dialog custom-modal-dialog">
@@ -381,7 +395,7 @@
       <img src="./images/images/icons8-ok-100.png" alt="">
       <h3 data-language="appointmenttittle">Um Ihren Termin zu buchen, nutzen Sie bitte unsere Kontaktdaten.</h3>
       <h4 data-language="appointmentdesc">Klicken Sie hier, um anzurufen oder eine SMS zu senden</h4>
-      <h2 data-language="appointmentphone"><a href="tel:945-768-8234" style="color: rgb(0, 57, 136);">+9457688234</a>
+      <h2 data-language="appointmentphone"><a href="tel:022338053627" style="color: rgb(0, 57, 136);">+022338053627</a>
       </h2>
       <button id="close" class="btn btn-style-1 btn-primary" data-language="close">
         nah dran
